--- a/main project/src/style/dropdown.scss
+++ b/main project/src/style/dropdown.scss
@@ -1,12 +1,13 @@
+@use "mixins" as *;
+
 .dropdown-container {
   position: fixed;
-
   z-index: 101;
 }
 
 .hamburger-menu {
   position: fixed;
-  font-size: 5rem;
+  font-size: 3rem;
   margin: 50px;
   color: #ffffff;
   z-index: 100;
@@ -19,25 +20,18 @@
 .dropdown-menu {
   position: absolute;
 
-  width: 300px;
+  width: 250px;
   height: 100vh;
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(10px);
   // border-radius: 0 0 15px 15px;
-  padding: 65px 20px 20px;
+  padding: 55px 20px 20px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
-@mixin menufont {
-  font-size: 1.8rem;
-  cursor: pointer;
-  transition: color 0.3s ease;
-  padding: 5px 0;
-  color: #023047;
-}
 .menu-items {
   display: flex;
   flex-direction: column;
@@ -52,7 +46,7 @@
     @include menufont;
 
     &:hover {
-      color: #fc8500;
+      color: #fff;
     }
   }
 }
