--- a/main project/src/style/Traveldairypage.scss
+++ b/main project/src/style/Traveldairypage.scss
@@ -63,14 +63,14 @@
 
 .write-button {
   @include font-style(
-    $size: 2rem,
+    $size: 1.5rem,
     $color: #236247,
     $align: center,
     $transition: 0.3s
   );
-  width: 180px;
+  width: 150px;
   position: fixed;
-  top: calc(30vh + 3rem);
+  top: calc(30vh + 2rem);
   right: 5rem;
   padding: 10px;
   background-color: white;
@@ -115,59 +115,63 @@
 
     .diary-text {
       background-color: rgb(215, 215, 215);
-      padding: 0 0 0 1.5rem;
-      margin-top: 10px;
-      border-radius: 10px;
+      padding: 0 1.5rem 0 1.5rem;
+      margin-top: 0.625rem;
+      border-radius: 0.625rem;
       flex: 1;
 
       .diary-title {
-        @include font-style($size: 2rem, $m-b: 0.5rem, $color: #333);
+        @include font-style($size: 1.3rem, $m-b: 0.5rem, $color: #333);
+        border-bottom: double rgb(193, 193, 193);
+        padding-bottom: 0.5rem;
       }
 
       .diary-description {
-        @include font-style($size: 1.5rem, $p-l: 8px, $color: #666);
+        @include font-style($size: 1rem, $p-l: 0.5rem, $color: #666);
+        background-color: #fff;
       }
     }
   }
 
   .diary-map {
     @include diary-topbox;
-  }
-}
 
-.map-placeholder {
-  @include flex($justify: center, $align: center);
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  border-radius: 8px;
-  color: #999;
+    .map-placeholder {
+      @include flex($justify: center, $align: center);
+      width: 100%;
+      height: 100%;
+      background-color: #fff;
+      border-radius: 0.625rem;
+      color: #999;
+    }
+  }
 }
 
 .diary-list {
   @include flex($justify: center, $align: center, $direction: column);
+
   padding: 2rem;
   background-color: #fff;
   min-height: 70vh;
   scroll-snap-align: start;
-}
 
-.diary-list-item {
-  display: flex;
-  gap: 1.5rem;
-  padding: 1.5rem;
-  border-radius: 8px;
-  background-color: #a7a7a7;
-  margin-bottom: 1rem;
+  .diary-list-item {
+    @include diary-topbox;
+    display: flex;
+    gap: 1.5rem;
+    padding: 1.3rem;
+    border-radius: 8px;
+    background-color: #ffffff;
+    margin-bottom: 1rem;
+    height: 200px;
 
-  height: 250px;
-}
-
-.list-image {
-  width: 250px;
-  height: 250px;
-  object-fit: cover;
-  border-radius: 10px;
+    .list-image {
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+  }
 }
 
 .list-content {
@@ -177,20 +181,24 @@
 }
 
 .list-title {
-  @include font-style($size: 2rem, $color: #333);
-  margin: 10px 0 20px 0;
+  @include font-style($size: 1.3rem, $color: #333);
+  margin: 10px 0 10px 0;
+  padding-left: 8px;
+  border-bottom: double rgb(193, 193, 193);
+  padding-bottom: 0.8rem;
 }
 
 .list-description {
-  @include font-style($size: 1.5rem, $color: #666, $line-height: 1.5);
-  height: 140px;
-  padding: 5px;
-  margin: 0 0 10px 0;
+  @include font-style($size: 1rem, $color: #666, $line-height: 1.5);
+  height: 120px;
+  border-radius: 4px;
+  padding-left: 12px;
+  margin: 0 0 8px 0;
   background-color: #ffffff;
 }
 
 .post-date {
-  @include font-style($size: 1.3rem, $color: #fff);
+  @include font-style($size: 1rem, $color: #ffffffbd);
   text-align: right;
   margin-right: 15px;
 }
