--- a/main project/src/style/travelInfopage.scss
+++ b/main project/src/style/travelInfopage.scss
@@ -1,4 +1,6 @@
 @use "mixins" as *;
+@include mobile;
+@include tablet;
 
 .fiexed-header {
   width: 100vw;
@@ -6,23 +8,16 @@
   background-color: bisque;
 }
 
-.tag-container {
-  @include flex($justify: center, $align: center, $direction: column);
-
-  width: 100%;
-  height: 15vh;
-  background-color: lightblue;
-}
-
 .card-wrapper {
   @include flex($justify: center, $align: center);
-  margin-top: 2.5rem;
+  margin-top: 5rem;
+  padding: 5rem;
   .card-container {
     @include flex($direction: column, $justify: center, $gap: 1rem);
     width: 60vw;
     height: 55vh;
     overflow-y: auto;
-    margin: 2rem 0 0 2rem;
+    padding: 3rem 0 0 2rem;
   }
 
   .card-contents {
@@ -41,12 +36,25 @@
 }
 
 // taglist
-ul {
-  @include font-style($size: 1.25rem);
-  list-style: none;
 
-  li {
-    display: inline-block;
-    margin: 0.5rem;
+.tag-container {
+  @include flex($justify: center, $align: center, $direction: column);
+
+  width: 100%;
+  height: 150px;
+  background-color: rgb(125, 201, 255);
+
+  ul {
+    @include font-style($size: 1.25rem);
+    list-style: none;
+
+    li {
+      display: inline-block;
+      margin: 0.5rem;
+
+      .city-name {
+        cursor: pointer;
+      }
+    }
   }
 }
