--- a/main project/src/style/Traveldairypage.scss
+++ b/main project/src/style/Traveldairypage.scss
@@ -7,14 +7,12 @@
 }
 
 .diary-header {
+  @include header;
   @include flex($justify: center, $align: center);
-  width: 100%;
-  height: 30vh;
+
   background-size: cover;
   background-position: center 60%;
-  position: fixed;
-
-  background-color: #666;
+  position: relative;
 
   &::before {
     content: "";
@@ -28,23 +26,15 @@
 }
 
 .header-text {
+  @include header-font;
   text-align: center;
   color: white;
   position: relative;
-
-  h1 {
-    font-size: 3rem;
-    margin-bottom: 2.5rem;
-  }
-
-  h2 {
-    font-size: 2rem;
-  }
 }
 
 .diary-container {
   position: absolute;
-  top: 30vh;
+  top: 26vh;
   left: 0;
   right: 0;
   bottom: 0;
@@ -52,9 +42,9 @@
   scrollbar-width: none;
   -ms-overflow-style: none;
   background: white;
-  scroll-snap-type: y mandatory;
+  // scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
-  background-color: #f3f3f3;
+  // background-color: #f3f3f3;
 
   &::-webkit-scrollbar {
     display: none;
@@ -63,15 +53,16 @@
 
 .write-button {
   @include font-style(
-    $size: 1.5rem,
+    $size: 1rem,
     $color: #236247,
     $align: center,
     $transition: 0.3s
   );
-  width: 150px;
+  width: 80px;
+  height: 80px;
   position: fixed;
-  top: calc(30vh + 2rem);
-  right: 5rem;
+  top: calc(85vh + 2rem);
+  right: 3rem;
   padding: 10px;
   background-color: white;
   border: solid 3px #fc8500;
@@ -82,92 +73,101 @@
     background-color: #e67a00;
     color: white;
   }
+  img {
+    width: 35px;
+    height: 35px;
+    padding-left: 7px;
+  }
 }
 
 .main-diary-section {
   @include flex($justify: center, $align: center);
-  height: 90vh;
+  // height: 75vh;
+  padding-top: 100px;
   scroll-snap-align: start;
-}
+  .diary-content {
+    @include flex($align: center, $justify: center);
+    width: 70%;
+    max-width: 1000px;
+    min-height: 400px; // 높이 동일하게 맞춤
+    gap: 1.5rem;
 
-.diary-content {
-  @include flex($align: center, $justify: center);
-  gap: 2.5rem;
-  width: 70%;
+    .diary-left {
+      @include flex($direction: column);
+      @include diary-topbox;
+      width: 600px;
+      height: 500px;
 
-  .diary-left {
-    @include flex($direction: column);
-    @include diary-topbox;
-
-    .diary-image {
-      width: 100%;
-      height: 380px;
-      object-fit: cover;
-      border-radius: 8px;
-      display: block;
-    }
-
-    .post-date {
-      color: #666;
-      font-size: 0.9rem;
-      margin-bottom: 0.5rem;
-    }
-
-    .diary-text {
-      background-color: rgb(215, 215, 215);
-      padding: 0 1.5rem 0 1.5rem;
-      margin-top: 0.625rem;
-      border-radius: 0.625rem;
-      flex: 1;
-
-      .diary-title {
-        @include font-style($size: 1.3rem, $m-b: 0.5rem, $color: #333);
-        border-bottom: double rgb(193, 193, 193);
-        padding-bottom: 0.5rem;
+      .diary-image {
+        width: 100%;
+        height: 380px;
+        object-fit: cover;
+        border-radius: 8px;
+        display: block;
       }
 
-      .diary-description {
-        @include font-style($size: 1rem, $p-l: 0.5rem, $color: #666);
-        background-color: #fff;
+      .post-date {
+        color: #666;
+        font-size: 0.9rem;
+        margin-bottom: 0.5rem;
+      }
+
+      .diary-text {
+        background-color: rgb(215, 215, 215);
+        padding: 0 1.5rem 0 1.5rem;
+        margin-top: 0.625rem;
+        border-radius: 0.625rem;
+        flex: 1;
+
+        .diary-title {
+          @include font-style($size: 1.3rem, $m-b: 0.5rem, $color: #333);
+          border-bottom: double rgb(193, 193, 193);
+          padding-bottom: 0.5rem;
+        }
+
+        .diary-description {
+          @include font-style($size: 1rem, $p-l: 0.5rem, $color: #666);
+          background-color: #fff;
+        }
       }
     }
-  }
 
-  .diary-map {
-    @include diary-topbox;
+    .diary-map {
+      @include diary-topbox;
+      width: 600px;
+      height: 500px;
 
-    .map-placeholder {
-      @include flex($justify: center, $align: center);
-      width: 100%;
-      height: 100%;
-      background-color: #fff;
-      border-radius: 0.625rem;
-      color: #999;
+      .map-placeholder {
+        @include flex($justify: center, $align: center);
+        width: 100%;
+        height: 100%;
+        background-color: lightgray;
+        border-radius: 0.625rem;
+        color: #999;
+      }
     }
   }
 }
 
 .diary-list {
-  @include flex($justify: center, $align: center, $direction: column);
-
-  padding: 2rem;
-  background-color: #fff;
-  min-height: 70vh;
-  scroll-snap-align: start;
+  @include flex($direction: column, $justify: center, $align: center);
+  margin-top: 60px;
+  // scroll-snap-align: start;
 
   .diary-list-item {
     @include diary-topbox;
-    display: flex;
+    @include flex($direction: cloumn, $justify: start, $align: center);
+    width: 52%;
+
     gap: 1.5rem;
-    padding: 1.3rem;
-    border-radius: 8px;
+    padding: 1rem;
     background-color: #ffffff;
-    margin-bottom: 1rem;
-    height: 200px;
+    margin-bottom: 1.5rem;
+    height: 150px;
 
     .list-image {
-      width: 200px;
-      height: 200px;
+      width: 150px;
+      height: 150px;
       object-fit: cover;
       border-radius: 10px;
     }
@@ -175,32 +175,28 @@
 }
 
 .list-content {
-  flex: 1;
-  padding-top: 5px;
   width: 55vw;
 }
 
 .list-title {
   @include font-style($size: 1.3rem, $color: #333);
-  margin: 10px 0 10px 0;
-  padding-left: 8px;
+  padding: 0.25rem;
+  margin: 0;
   border-bottom: double rgb(193, 193, 193);
-  padding-bottom: 0.8rem;
 }
 
 .list-description {
   @include font-style($size: 1rem, $color: #666, $line-height: 1.5);
-  height: 120px;
+  height: 80px;
   border-radius: 4px;
-  padding-left: 12px;
-  margin: 0 0 8px 0;
-  background-color: #ffffff;
+  background-color: #e2e2e2c7;
+  padding: 0.25rem;
 }
 
 .post-date {
-  @include font-style($size: 1rem, $color: #ffffffbd);
+  @include font-style($size: 1rem, $color: #9c9c9cbd);
   text-align: right;
-  margin-right: 15px;
+  margin-right: 0.625rem;
 }
 
 @keyframes bounce {
