--- a/main project/src/style/Travelhistory.scss
+++ b/main project/src/style/Travelhistory.scss
@@ -1,13 +1,12 @@
+@use "mixins" as *;
+
 .editor-container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
 
   .editor-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 1.5rem;
+    @include header;
 
     h1 {
       font-size: 1.5rem;
