--- a/main project/src/style/dropdown.scss
+++ b/main project/src/style/dropdown.scss
@@ -10,6 +10,7 @@
   font-size: 3rem;
   margin: 50px;
   color: #ffffff;
+  text-shadow: 0 0 10px rgb(255, 119, 0);
   z-index: 100;
   cursor: pointer;
   line-height: 0.6;
@@ -25,7 +26,7 @@
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(10px);
   // border-radius: 0 0 15px 15px;
-  padding: 55px 20px 20px;
+  padding: 5px 20px 20px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   opacity: 0;
   visibility: hidden;
@@ -37,7 +38,7 @@
   flex-direction: column;
   gap: 40px;
   text-align: right;
-  // margin-top: 80px;
+  margin-top: 50px;
   padding-right: 80px;
   text-decoration: none;
 
