--- a/main project/src/style/mixins.scss
+++ b/main project/src/style/mixins.scss
@@ -12,13 +12,32 @@
   justify-content: $justify;
   gap: $gap;
 }
+// header
+@mixin header {
+  width: 100%;
+  height: 25vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@mixin header-font {
+  letter-spacing: 0.125rem;
+  h1 {
+    font-size: 2rem;
+    font-weight: 700;
+  }
+  h2 {
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+}
 
 @mixin diary-topbox {
   width: 800px;
   height: 600px;
   border-radius: 15px;
   box-shadow: 0 0 10px gray;
-  padding: 1.5rem;
+  padding: 1rem;
 }
 
 @mixin font-style(
