--- a/main project/src/style/travelInfopage.scss
+++ b/main project/src/style/travelInfopage.scss
@@ -2,21 +2,72 @@
 @include mobile;
 @include tablet;
 
-.fiexed-header {
-  width: 100vw;
-  height: 30vh;
-  background-color: bisque;
+.info-page {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.info-header {
+  @include header;
+  @include flex($justify: center, $align: center);
+
+  background-size: cover;
+  background-position: center 60%;
+  position: relative;
+}
+
+// taglist
+.tag-container {
+  @include flex($justify: center, $align: center, $direction: column);
+
+  width: 100%;
+  height: 15vh;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%; // ✅ 가운데 정렬
+    width: 80%; // ✅ 너비 80%로 조정
+    height: 3px;
+    border-bottom: double 3px rgb(88, 88, 88);
+    transform: translateX(-50%); // ✅ 가운데 정렬 유지
+  }
+
+  ul {
+    @include flex($justify: center, $gap: 1rem);
+    list-style: none;
+    cursor: pointer;
+
+    .city-name {
+      @include font-style($size: 1.75rem, $line-height: 1, $weight: 600);
+      display: inline-block;
+      // margin-bottom: 3px;
+    }
+    .district-name {
+      @include font-style(
+        $size: 1.5rem,
+        $line-height: 0.5,
+        $color: rgb(70, 70, 70)
+      );
+      display: inline-block;
+      // margin-bottom: 3px;
+    }
+  }
 }
 
 .card-wrapper {
   @include flex($justify: center, $align: center);
-  margin-top: 5rem;
-  padding: 5rem;
+  @include font-style($size: 1.25rem);
+
+  overflow-y: auto;
+  // padding: 2rem 0 0 2rem;
   .card-container {
     @include flex($direction: column, $justify: center, $gap: 1rem);
-    width: 60vw;
-    height: 55vh;
-    overflow-y: auto;
+    width: 70vw;
+    height: auto;
     padding: 3rem 0 0 2rem;
   }
 
@@ -31,30 +82,6 @@
     p {
       font-size: large;
       font-weight: 600;
-    }
-  }
-}
-
-// taglist
-
-.tag-container {
-  @include flex($justify: center, $align: center, $direction: column);
-
-  width: 100%;
-  height: 150px;
-  background-color: rgb(125, 201, 255);
-
-  ul {
-    @include font-style($size: 1.25rem);
-    list-style: none;
-
-    li {
-      display: inline-block;
-      margin: 0.5rem;
-
-      .city-name {
-        cursor: pointer;
-      }
     }
   }
 }
