--- a/main project/src/style/modalStyle.scss
+++ b/main project/src/style/modalStyle.scss
@@ -18,30 +18,40 @@
   }
 
   .modal-login {
-    @include font-style($size: 4rem, $align: center);
+    @include font-style($size: 2.5rem, $align: center);
+    @include flex($direction: column, $justify: center, $align: center);
 
     hr {
       width: 400px;
       height: 3px;
       background-color: rgb(255, 255, 255, 0.3);
-      margin-bottom: 60px;
+      margin-bottom: 40px;
     }
 
     button {
-      width: 300px;
+      width: 18.75rem;
+      height: 4.5625rem;
       border: none;
       background-color: transparent;
       margin-bottom: 10px;
+      // background-color: gray;
+      overflow: hidden;
+      border-radius: 10px;
 
       img {
-        width: 300px;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
       }
     }
 
+    .login-on {
+      @include font-style($size: 1.25rem, $m-b: 10px);
+    }
     .close-btn {
-      width: 300px;
+      width: 200px;
       height: 60px;
-      background-color: lightgray;
+      background-color: #ff870199;
       border-radius: 10px;
       margin-top: 25px;
       @include font-style($size: 2rem, $align: center);
