--- a/main project/src/style/travelInfopage.scss
+++ b/main project/src/style/travelInfopage.scss
@@ -29,11 +29,11 @@
     content: "";
     position: absolute;
     bottom: 0;
-    left: 50%; // ✅ 가운데 정렬
-    width: 80%; // ✅ 너비 80%로 조정
+    left: 50%; // 가운데 정렬
+    width: 80%; // 너비 80%로 조정
     height: 3px;
     border-bottom: double 3px rgb(88, 88, 88);
-    transform: translateX(-50%); // ✅ 가운데 정렬 유지
+    transform: translateX(-50%); // 가운데 정렬 유지
   }
 
   ul {
@@ -42,13 +42,17 @@
     cursor: pointer;
 
     .city-name {
-      @include font-style($size: 1.75rem, $line-height: 1, $weight: 600);
+      @include font-style(
+        $size: clamp(1.2rem, 2.5vw, 1.75rem),
+        $line-height: 1,
+        $weight: 600
+      );
       display: inline-block;
       // margin-bottom: 3px;
     }
     .district-name {
       @include font-style(
-        $size: 1.5rem,
+        $size: clamp(1rem, 2.5vw, 1.5rem),
         $line-height: 0.5,
         $color: rgb(70, 70, 70)
       );
@@ -62,26 +66,54 @@
   @include flex($justify: center, $align: center);
   @include font-style($size: 1.25rem);
 
-  overflow-y: auto;
-  // padding: 2rem 0 0 2rem;
+  width: 100%;
+  height: calc(100vh - 15vh);
+  overflow-y: auto; // 스크롤 가능 설정
+  padding-top: 2.5rem;
+
   .card-container {
-    @include flex($direction: column, $justify: center, $gap: 1rem);
-    width: 70vw;
-    height: auto;
-    padding: 3rem 0 0 2rem;
+    @include flex(
+      $direction: column,
+      $justify: flex-start,
+      $align: center,
+      $gap: 1rem
+    );
+    width: 100%;
+    height: 100%; //.card-wrapper` 높이에 맞게 설정
+    padding: 2rem 0 0 0;
+    text-decoration: none;
   }
 
   .card-contents {
-    display: flex;
-    gap: 20px;
+    @include flex($align: center, $justify: center, $gap: 20px);
+    width: 60vw;
+    max-width: 1000px;
+    // flex-wrap: wrap; // ✅ 화면을 벗어나지 않도록 wrap 적용
+    text-decoration: none;
+    padding: 1.2rem;
+    // background-color: lightgray;
 
     .small-image {
-      width: 300px;
+      width: 100%;
+      max-width: 300px;
+      border-radius: 16px;
     }
 
-    p {
-      font-size: large;
-      font-weight: 600;
+    .info-article {
+      @include flex($justify: center, $direction: column);
+
+      .info-title {
+        @include font-style($size: 2rem, $m-b: 5px);
+      }
+      .info-addr {
+        @include font-style($size: 1rem, $m-b: 8px, $color: rgb(129, 129, 129));
+        width: 550px;
+        padding-bottom: 5px;
+        border-bottom: dotted 1px rgb(171, 171, 171);
+      }
+      .info-content {
+        @include font-style($size: 1rem);
+      }
     }
   }
 }
