--- a/src/style/EditorCommon.scss
+++ b/src/style/EditorCommon.scss
@@ -1,4 +1,4 @@
-.toastui-editor-contents > p:first-child,
-.toastui-editor-contents > p:nth-child(2) {
-  display: none;
-}
+// .toastui-editor-contents > p:first-child,
+// .toastui-editor-contents > p:nth-child(2) {
+//   display: none;
+// }
