--- a/src/style/modalStyle.scss
+++ b/src/style/modalStyle.scss
@@ -1,60 +1,60 @@
-@use "mixins" as *;
+// @use "mixins" as *;
 
-.modal-container {
-  @include flex($justify: center, $align: center);
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  position: fixed;
-  z-index: 1000;
+// .modal-container {
+//   @include flex($justify: center, $align: center);
+//   width: 100vw;
+//   height: 100vh;
+//   background-color: rgba(0, 0, 0, 0.5);
+//   position: fixed;
+//   z-index: 1000;
 
-  .modal-contents {
-    @include flex($justify: center, $align: center);
+//   .modal-contents {
+//     @include flex($justify: center, $align: center);
 
-    width: 500px;
-    height: 700px;
-    background-color: rgb(231, 231, 231, 0.7);
-    border-radius: 10px;
-  }
+//     width: 500px;
+//     height: 700px;
+//     background-color: rgb(231, 231, 231, 0.7);
+//     border-radius: 10px;
+//   }
 
-  .modal-login {
-    @include font-style($size: 2.5rem, $align: center);
-    @include flex($direction: column, $justify: center, $align: center);
+//   .modal-login {
+//     @include font-style($size: 2.5rem, $align: center);
+//     @include flex($direction: column, $justify: center, $align: center);
 
-    hr {
-      width: 400px;
-      height: 3px;
-      background-color: rgb(255, 255, 255, 0.3);
-      margin-bottom: 40px;
-    }
+//     hr {
+//       width: 400px;
+//       height: 3px;
+//       background-color: rgb(255, 255, 255, 0.3);
+//       margin-bottom: 40px;
+//     }
 
-    button {
-      width: 18.75rem;
-      height: 4.5625rem;
-      border: none;
-      background-color: transparent;
-      margin-bottom: 10px;
-      // background-color: gray;
-      overflow: hidden;
-      border-radius: 10px;
+//     button {
+//       width: 18.75rem;
+//       height: 4.5625rem;
+//       border: none;
+//       background-color: transparent;
+//       margin-bottom: 10px;
+//       // background-color: gray;
+//       overflow: hidden;
+//       border-radius: 10px;
 
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-      }
-    }
+//       img {
+//         width: 100%;
+//         height: 100%;
+//         object-fit: contain;
+//       }
+//     }
 
-    .login-on {
-      @include font-style($size: 1.25rem, $m-b: 10px);
-    }
-    .close-btn {
-      width: 200px;
-      height: 60px;
-      background-color: #ff870199;
-      border-radius: 10px;
-      margin-top: 25px;
-      @include font-style($size: 2rem, $align: center);
-    }
-  }
-}
+//     .login-on {
+//       @include font-style($size: 1.25rem, $m-b: 10px);
+//     }
+//     .close-btn {
+//       width: 200px;
+//       height: 60px;
+//       background-color: #ff870199;
+//       border-radius: 10px;
+//       margin-top: 25px;
+//       @include font-style($size: 2rem, $align: center);
+//     }
+//   }
+// }
