--- a/src/style/mainpage.scss
+++ b/src/style/mainpage.scss
@@ -8,6 +8,7 @@
   height: 100vh;
   overflow-y: scroll;
   overflow-x: hidden;
+  scroll-snap-type: y mandatory;
   -ms-overflow-style: none;
   scrollbar-width: none;
 
