--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,3 +1,5 @@
+@use "../../style/mixins.scss" as *;
+
 .carouselContainer {
   width: 100%;
   padding: 50px 0;
@@ -22,7 +24,7 @@
   :global {
     .swiper-button-next,
     .swiper-button-prev {
-      color: #000;
+      color: $color-yellow;
       &:hover {
         color: #666;
       }
