--- a/src/style/Mypage.scss
+++ b/src/style/Mypage.scss
@@ -1,6 +1,10 @@
 @use "mixins" as *;
+@include mobile;
+@include tablet;
 
 .mypage-container {
+  @include flex($justify: center, $align: center, $direction: column);
+
   max-width: 500px;
   margin: 50px auto;
   padding: 20px;
@@ -9,47 +13,78 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
 
+  h2 {
+    @include font-style(
+      $size: 1.75rem,
+      $color: $color-navy,
+      $weight: 600,
+      $m-b: 30px
+    );
+  }
+
   .profile-section {
     margin-bottom: 20px;
 
     .profile-pic {
-      width: 100px;
-      height: 100px;
+      width: 150px;
+      height: 150px;
       border-radius: 50%;
       object-fit: cover;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
 
-    input {
+    input[type="file"] {
       display: block;
-      margin: 10px auto;
+      margin: 10px 20%;
+      text-align: center;
+      font-size: 1rem;
+      color: #023047;
+
+      &::file-selector-button {
+        @include file-selector;
+      }
+    }
+    button {
+      @include profle-picbtn;
+      padding: 0.75em 1.25em;
     }
   }
 
-  .info-section {
-    p {
-      margin: 10px 0;
-    }
+  input {
+    @include flex($justify: center, $align: center);
+    margin: 10px;
+  }
+}
+
+.info-section {
+  @include flex($justify: center, $align: center, $direction: column);
+  @include font-style($size: 1.2rem, $weight: 500);
+  margin: 15px 0;
+  color: $color-navy;
+
+  .nickname {
+    @include flex($justify: center, $align: center, $gap: 3px);
+    height: 40px;
+    padding: 5px;
 
     input {
-      margin-left: 10px;
-      padding: 5px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
+      @include font-style($size: 1.2rem, $weight: 500);
+      width: 150px;
+      height: 15px;
+      margin-left: 8px;
+      padding: 8px;
+      margin-bottom: 8px;
+      border: 2px solid $color-greenblue;
+      border-radius: 8px;
+      color: rgba(2, 48, 71, 0.367);
+      line-height: 200px;
     }
 
     button {
-      margin-left: 5px;
-      padding: 5px 10px;
-      border: none;
-      background-color: #007bff;
-      color: white;
-      border-radius: 5px;
-      cursor: pointer;
-
-      &:hover {
-        background-color: #0056b3;
-      }
+      @include profle-picbtn;
+      height: 2.25rem;
+      padding: 10px;
+      margin: 0;
     }
   }
 }
