--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -1,3 +1,9 @@
+$color-navy: #023047;
+$color-orange: #fc6500;
+$color-yellow: #ffb701;
+$color-sky: #8ecae6;
+$color-greenblue: #209ebb;
+
 @mixin flex(
   $display: flex,
   $direction: row,
@@ -78,5 +84,45 @@
 @mixin tablet {
   @media (max-width: 1024px) {
     @content;
+  }
+}
+
+@mixin file-selector {
+  width: 5rem;
+  height: 2rem;
+  border-radius: 8px;
+  background-color: #209ebb;
+  box-sizing: border-box;
+  border: none;
+  color: white;
+  font-weight: 500;
+}
+
+@mixin profle-picbtn {
+  transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+  &:hover {
+    box-shadow: 0 0 40px 40px #209ebb inset;
+  }
+  box-sizing: border-box;
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #209ebb;
+  border-radius: 0.6em;
+  color: #209ebb;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
+  margin: 5px;
+  // padding: 0.75em 1.25em;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+
+  &:hover,
+  &:focus {
+    color: #fff;
+    outline: 0;
   }
 }
