--- a/src/style/Traveldairypage.scss
+++ b/src/style/Traveldairypage.scss
@@ -113,7 +113,7 @@
       }
 
       .diary-text {
-        background-color: rgb(215, 215, 215);
+        // background-color: rgb(215, 215, 215);
         padding: 0 1.5rem 0 1.5rem;
         margin-top: 0.625rem;
         border-radius: 0.625rem;
