--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -21,7 +21,12 @@
 }
 
 .tag-container {
-  @include flex($justify: center, $align: center, $direction: column, $gap: 10px);
+  @include flex(
+    $justify: center,
+    $align: center,
+    $direction: column,
+    $gap: 10px
+  );
 
   width: 100%;
   height: 100px;
@@ -40,38 +45,38 @@
 
   .city-name {
     @include font-style(
-      $size: clamp(1rem, 2vw, 1.5rem),
+      $size: clamp(1.5rem, 1.75rem, 1.75rem),
       $line-height: 1,
       $weight: 600
+    );
+    display: inline-block;
+    padding: 5px;
+    border-radius: 10px;
+
+    &:hover {
+      background-color: $color-gray;
+      border-radius: 10px;
+    }
+
+    &.active {
+      background-color: $color-sky;
+    }
+  }
+  .district-name {
+    @include font-style(
+      $size: clamp(1rem, 1.25rem, 1.25rem),
+      $line-height: 0.5,
+      $color: rgb(70, 70, 70)
     );
     display: inline-block;
     padding: 0 10px;
     border-radius: 10px;
 
     &:hover {
-      background-color: #f0f0f0;
-      border-radius: 10px;
+      background-color: $color-gray;
     }
-
     &.active {
-      background-color: lightblue;
+      background-color: $color-sky;
     }
-  }
-  .district-name {
-    @include font-style(
-      $size: clamp(1rem, 2vw, 1.5rem),
-      $line-height: 0.5,
-      $color: rgb(70, 70, 70)
-      );
-      display: inline-block;
-      padding: 0 10px;
-      border-radius: 10px;
-      
-      &:hover {
-        background-color: #f0f0f0;
-      }
-      &.active {
-        background-color: lightblue;
-      }
   }
 }
