--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -4,6 +4,9 @@ $color-yellow: #ffb701;
 $color-sky: #8ecae6;
 $color-greenblue: #209ebb;
 
+$color-white: #ffffff;
+$color-gray: #f0f0f0;
+
 @mixin flex(
   $display: flex,
   $direction: row,
@@ -123,6 +126,36 @@ $color-greenblue: #209ebb;
   &:hover,
   &:focus {
     color: #fff;
+    outline: 0;
+  }
+}
+
+@mixin publishbtn {
+  transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+  &:hover {
+    box-shadow: 0 0 40px 40px $color-white inset;
+  }
+  background-color: $color-greenblue;
+  box-sizing: border-box;
+  appearance: none;
+  // background-color: transparent;
+  border: 2px solid #209ebb;
+  border-radius: 0.6em;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
+  margin: 5px;
+  // padding: 0.75em 1.25em;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+
+  &:hover,
+  &:focus {
+    color: $color-greenblue;
     outline: 0;
   }
 }
