--- a/src/style/Mypage.scss
+++ b/src/style/Mypage.scss
@@ -4,7 +4,7 @@
 
 .mypage-container {
   @include flex($justify: center, $align: center, $direction: column);
-
+  background-color: rgba(255, 255, 255, 0.849);
   max-width: 500px;
   margin: 50px auto;
   padding: 20px;
@@ -31,6 +31,7 @@
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 20px;
+      box-shadow: 0 0 5px #737373;
     }
 
     input[type="file"] {
