--- a/src/style/dropdown.scss
+++ b/src/style/dropdown.scss
@@ -20,7 +20,7 @@
 
 .dropdown-menu {
   position: absolute;
-
+  @include flex($justify: end);
   width: 250px;
   height: 100vh;
   background: rgba(255, 255, 255, 0.2);
@@ -31,24 +31,32 @@
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease, visibility 0.3s ease;
-}
 
-.menu-items {
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  text-align: right;
-  margin-top: 50px;
-  padding-right: 80px;
-  text-decoration: none;
+  .menu-items {
+    @include flex($direction: column, $gap: 10px);
+    // display: flex;
+    // flex-direction: column;
+    // gap: 40px;
+    width: 80px;
+    text-align: right;
+    margin: 50px 0 0 50px;
+    padding-right: 30px;
+    text-decoration: none;
 
-  .login {
-    margin-bottom: 50px;
-    @include menufont;
-   
-    &:hover {
-      color: #fff;
+    .login {
+      margin-bottom: 50px;
+      @include menufont;
+
+      &:hover {
+        color: #fff;
+      }
     }
+  }
+  .profile-pic {
+    width: 50px;
+    height: 50px;
+    margin: 50px 0 0 0;
+    border-radius: 50%;
   }
 }
 
