--- a/src/style/modalStyle.scss
+++ b/src/style/modalStyle.scss
@@ -1,60 +1,69 @@
-// @use "mixins" as *;
+@use "mixins" as *;
 
-// .modal-container {
-//   @include flex($justify: center, $align: center);
-//   width: 100vw;
-//   height: 100vh;
-//   background-color: rgba(0, 0, 0, 0.5);
-//   position: fixed;
-//   z-index: 1000;
+.modal-container {
+  //   @include flex($justify: center, $align: center);
+  //   width: 100vw;
+  //   height: 100vh;
+  //   background-color: rgba(0, 0, 0, 0.5);
+  //   position: fixed;
+  //   z-index: 1000;
 
-//   .modal-contents {
-//     @include flex($justify: center, $align: center);
+  .modal-contents {
+    @include flex($justify: center, $align: center);
 
-//     width: 500px;
-//     height: 700px;
-//     background-color: rgb(231, 231, 231, 0.7);
-//     border-radius: 10px;
-//   }
+    width: 500px;
+    height: 700px;
+    background-color: rgb(231, 231, 231, 0.7);
+    border-radius: 10px;
+  }
 
-//   .modal-login {
-//     @include font-style($size: 2.5rem, $align: center);
-//     @include flex($direction: column, $justify: center, $align: center);
+  .modal-login {
+    @include font-style($size: 2.5rem, $align: center);
+    @include flex($direction: column, $justify: center, $align: center);
 
-//     hr {
-//       width: 400px;
-//       height: 3px;
-//       background-color: rgb(255, 255, 255, 0.3);
-//       margin-bottom: 40px;
-//     }
+    .logo {
+      @include flex($justify: center);
+      width: 200px;
+      //   padding: 0 0 px 0;
+    }
 
-//     button {
-//       width: 18.75rem;
-//       height: 4.5625rem;
-//       border: none;
-//       background-color: transparent;
-//       margin-bottom: 10px;
-//       // background-color: gray;
-//       overflow: hidden;
-//       border-radius: 10px;
+    hr {
+      width: 400px;
+      height: 3px;
+      background-color: rgb(255, 255, 255, 0.3);
+      margin: 40px 0;
+    }
 
-//       img {
-//         width: 100%;
-//         height: 100%;
-//         object-fit: contain;
-//       }
-//     }
+    button {
+      width: 18.75rem;
+      height: 4.5625rem;
+      border: none;
+      background-color: transparent;
+      margin-bottom: 10px;
+      overflow: hidden;
+      border-radius: 10px;
 
-//     .login-on {
-//       @include font-style($size: 1.25rem, $m-b: 10px);
-//     }
-//     .close-btn {
-//       width: 200px;
-//       height: 60px;
-//       background-color: #ff870199;
-//       border-radius: 10px;
-//       margin-top: 25px;
-//       @include font-style($size: 2rem, $align: center);
-//     }
-//   }
-// }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+
+    .login-on {
+      @include font-style($size: 1.25rem, $m-b: 10px);
+
+      input[type="checkbox"] {
+        margin-right: 5px;
+      }
+    }
+    .close-btn {
+      width: 150px;
+      height: 50px;
+      background-color: $color-gray;
+      border-radius: 10px;
+      margin-top: 25px;
+      @include font-style($size: 1.5rem, $align: center, $color: $color-navy);
+    }
+  }
+}
