--- a/src/style/Traveldairypage.scss
+++ b/src/style/Traveldairypage.scss
@@ -68,6 +68,7 @@
   border: solid 3px #fc8500;
   border-radius: 50px;
   cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
 
   &:hover {
     background-color: #e67a00;
@@ -113,7 +114,6 @@
       }
 
       .diary-text {
-        // background-color: rgb(215, 215, 215);
         padding: 0 1.5rem 0 1.5rem;
         margin-top: 0.625rem;
         border-radius: 0.625rem;
