--- a/src/style/EditorCommon.scss
+++ b/src/style/EditorCommon.scss
@@ -1,29 +1,29 @@
 @use "../style/mixins.scss" as *;
 
+.editor-wrapper {
+  margin-top: 50px;
+}
+
 .editor-container {
-  //   background-color: #997272;
   width: 70vw;
   margin-top: 50px;
+  padding: 0;
 }
 
 .image-upload-section {
   @include flex($justify: center, $direction: column);
   border-bottom: solid 0.5px $color-navy;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .location-section {
-  @include flex(
-    $direction: row,
-    $align: center,
-    $gap: 10px,
-    // $justify: space-between
-  );
+  @include flex($direction: column, $gap: 10px);
   .location-header {
-    @include flex($direction: row);
+    @include flex($justify: start, $direction: row);
     h3 {
       letter-spacing: 8px;
       color: $color-navy;
+      margin-left: 10px;
     }
     button {
       @include profle-picbtn;
@@ -31,11 +31,26 @@
       margin: 0 0 0 8px;
       letter-spacing: 3px;
     }
+    p {
+      padding-left: 10px;
+    }
   }
 }
 // 파일선택, 위치정보 text
 .info-text {
   @include font-style($size: 0.875rem);
+
   color: $color-navy;
   padding-top: 12px;
 }
+
+.static-map {
+  @include flex($direction: column, $justify: center, $align: center);
+  width: 80%;
+  height: 500px;
+  margin: 10px auto 30px auto;
+}
+// .mapload {
+//   @include flex($justify: center, $align: center);
+//   margin: auto;
+// }
