--- a/src/style/ImageUpload.scss
+++ b/src/style/ImageUpload.scss
@@ -1,6 +1,8 @@
 @use "../style/mixins.scss" as *;
 
 .image-upload-container {
+  margin-top: 50px;
+
   .file-input-wrapper {
     margin-bottom: 10px;
     @include flex($direction: row, $align: center);
@@ -15,30 +17,29 @@
 
     h3 {
       color: $color-navy;
+      margin-left: 10px;
+    }
+  }
+  .image-preview-container {
+    @include flex($gap: 10px);
+    margin: 10px 0 10px 10px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    width: 100%;
+    -webkit-overflow-scrolling: touch;
+
+    &::-webkit-scrollbar {
+      height: 8px;
     }
 
-    .image-preview-container {
-      display: flex;
-      gap: 10px;
-      margin-top: 10px;
-      overflow-x: auto;
-      width: 100%;
-      padding: 10px;
-      -webkit-overflow-scrolling: touch;
+    &::-webkit-scrollbar-track {
+      background: #f1f1f1;
+      border-radius: 4px;
+    }
 
-      &::-webkit-scrollbar {
-        height: 8px;
-      }
-
-      &::-webkit-scrollbar-track {
-        background: #f1f1f1;
-        border-radius: 4px;
-      }
-
-      &::-webkit-scrollbar-thumb {
-        background: #888;
-        border-radius: 4px;
-      }
+    &::-webkit-scrollbar-thumb {
+      background: #888;
+      border-radius: 4px;
     }
 
     .preview-item {
@@ -46,6 +47,7 @@
       width: 100px;
       height: 100px;
       flex-shrink: 0;
+      margin: 5px 0;
 
       .preview-image {
         width: 100%;
