--- a/src/style/Mypage.scss
+++ b/src/style/Mypage.scss
@@ -34,17 +34,26 @@
       box-shadow: 0 0 5px #737373;
     }
 
-    input[type="file"] {
-      display: block;
-      margin: 10px 20%;
-      text-align: center;
-      font-size: 1rem;
-      color: #023047;
+    .mypage-file {
+      @include flex($justify: center, $align: center);
+      margin: auto;
 
-      &::file-selector-button {
-        @include file-selector;
+      input[type="file"] {
+        // @include ellipsis(250px);
+        display: block;
+        width: 200px;
+        margin: 10px auto;
+        text-align: center;
+        font-size: 1rem;
+        color: #023047;
+        text-overflow: ellipsis;
+
+        &::file-selector-button {
+          @include file-selector;
+        }
       }
     }
+
     button {
       @include profle-picbtn;
       padding: 0.75em 1.25em;
@@ -53,7 +62,7 @@
 
   input {
     @include flex($justify: center, $align: center);
-    margin: 10px;
+    margin: 8px;
   }
 }
 
@@ -64,7 +73,7 @@
   color: $color-navy;
 
   .nickname {
-    @include flex($justify: center, $align: center, $gap: 3px);
+    @include flex($justify: center, $align: center, $gap: 3px, $wrap: wrap);
     height: 40px;
     padding: 5px;
 
@@ -84,8 +93,11 @@
     button {
       @include profle-picbtn;
       height: 2.25rem;
-      padding: 10px;
+      padding: 8px 10px;
       margin: 0;
     }
   }
+}
+p {
+  @include font-style($size: 1rem, $color: rgb(255, 75, 75));
 }
